--- a/app/views/static_pages/terms_of_use.html.erb
+++ b/app/views/static_pages/terms_of_use.html.erb
@@ -1,73 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Feats With Friends | Create and compete over records set all over the world.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<%- content_for( :title_description ) { "Terms of Use" } -%>
 
-    <!-- Le styles -->
-    <link href="public/stylesheets/bootstrap.css" rel="stylesheet">
-    <link href="public/stylesheets/custom.css" rel="stylesheet">
-    <style type="text/css">
-       
-    body {
-		padding-top: 50px;
-        padding-bottom: 0px;
-    }
-	
-    </style>
-    <link href="public/stylesheets/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-  </head>
-
-
-  <body>
-
-  
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="single_signup.html"><img alt="Feats of" src="public/images/featsof.png" style="height:38px"></a>
-          <div class="nav-collapse">
-          </div>
-          
-          <div class="nav-collapse pull-right">
-            <ul class="nav">
-              <li class="dropdown">
-              <a href="#"
-              class="dropdown-toggle"
-              data-toggle="dropdown">
-              My Account
-              <b class="caret"></b>  
-              </a>
-                <ul class="dropdown-menu">
-                </ul>
-              </li>
-            </ul>
-          </div>
-
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-    
-    <div class="background-unit">
+<div class="background-unit">
       <div class="container">
         <div class="row-fluid">
           <div class="span12">
@@ -313,57 +246,4 @@ We reserve the right to change or modify any provisions of these Terms and any p
         </div>
       </div>
     </div>
-
-
-
-   <footer>
-   
-   <div class="footer-unit">
-     <div class="container">
-       <div class="row-fluid">
-         <div class="span3">
-           <h1><em>Feats With Friends</em></h1>
-           <a href="work.html"/><h2>How It Works</h2></a>
-           <a href="terms.html"/><h2>Terms Of Service</h2></a>
-           <a href="terms.html#privacy"/><h2>Privacy Policy</h2></a>
-         </div>
-         <div class="span4">
-           <h1><em>Help Us Build A Better Website</em></h1>
-           <a href="report.html"/><h2>Report A Bug</h2></a>
-           <a href="mailto:feedback@featswithfriends.com"><h2>feedback@featswithfriends.com</h2></a>
-         </div>
-         <div class="span3">
-           <h1><em>Connecting With Us</em></h1>
-           <a href="http://www.twitter.com/featsof" onclick="window.open('https://twitter.com/FeatsOf','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>@featsof</h2></a>
-           <a href="http://www.facebook.com/featswithfriends" onclick="window.open('https://facebook.com/featswithfriends','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>facebook</h2></a>
-         </div>
-         <div class="span2"><h3><br>©2012 IgnitionPad, LLC. All Rights Reserved</h3>
-         </div>
-       </div>
-     </div>
-   </div>
-  
-      
-   </footer>
-  
-    
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.js"></script>
-  <script src="assets/js/bootstrap-transition.js"></script>
-  <script src="assets/js/bootstrap-alert.js"></script>
-  <script src="assets/js/bootstrap-modal.js"></script>
-  <script src="assets/js/bootstrap-dropdown.js"></script>
-  <script src="assets/js/bootstrap-scrollspy.js"></script>
-  <script src="assets/js/bootstrap-tab.js"></script>
-  <script src="assets/js/bootstrap-tooltip.js"></script>
-  <script src="assets/js/bootstrap-popover.js"></script>
-  <script src="assets/js/bootstrap-button.js"></script>
-  <script src="assets/js/bootstrap-collapse.js"></script>
-  <script src="assets/js/bootstrap-carousel.js"></script>
-  <script src="assets/js/bootstrap-typeahead.js"></script>
-
-  </body>
- 
-</html>
+	
