--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,7 +28,7 @@
 			          <li><%= link_to "My Feats", feats_path %></li>
 								<li><%= link_to "My Records", attempts_path %></li>
 			          <li>
-									<%= link_to "My Profile", edit_user_path(current_user) %>
+									<%= link_to "My Profile", user_path(current_user) %>
 								</li>
 			          <li class="divider"></li>
 			          <li>
