Info windows on multi location maps

--- a/app/views/attempts/index.html.erb
+++ b/app/views/attempts/index.html.erb
@@ -1,70 +1,4 @@
-<script type="text/javascript"
-	src="http://maps.googleapis.com/maps/api/js?key=<%=ENV['GOOGLE_API_KEY']%>&sensor=false">
-</script>
-<script type="text/javascript">
-	var gMap;
-	var gMarkers = [ ];
-	
-	$(function () {
-		var lat_lng_bounds = new google.maps.LatLngBounds();
-		var zoom = 15;
-		var title = "";
-		
-		<% if @attempts.empty? %>
-			<% if request.location.latitude == 0 && 
-				    request.location.longitude == 0 %>
-				var lat_lng = new google.maps.LatLng(37.09024, -95.712891);
-				zoom    = 4;
-			<% else %>	
-				var lat_lng = new google.maps.LatLng(<%=request.location.latitude%>,
-												<%=request.location.longitude%>);
-			<% end %>
-		<% else %>
-			var lat_lng = 
-						new google.maps.LatLng(<%=@attempts.first.feat.location.latitude%>,
-			 						<%=@attempts.first.feat.location.longitude%>);
-		<% end %>
-		
-	  var mapOptions = {
-	    center: lat_lng,
-	    zoom: zoom,
-	    mapTypeId: google.maps.MapTypeId.ROADMAP
-	  };
-	
-	  gMap = new google.maps.Map(document.getElementById("map_canvas"),
-	          mapOptions);
-	
-		<% if @attempts.any? %>
-			<% @attempts.each do |a| %>
-				lat_lng = new google.maps.LatLng(<%=a.feat.location.latitude%>,
-					 							<%=a.feat.location.longitude%>);
-				var marker = new google.maps.Marker({
-					position: lat_lng,
-					title: "<%=a.feat.name%>",
-				});
-
-				marker.setMap(gMap);
-	 			gMarkers.push(marker);
-				lat_lng_bounds.extend(lat_lng);
-			<% end %>
-			<% if @attempts.length > 1 %>
-				gMap.fitBounds(lat_lng_bounds);
-			<% end %>		
-		<% else %>
-			var marker = new google.maps.Marker({
-				position: lat_lng,
-				title: title
-			});
-
-			marker.setMap(gMap);
-		<% end %>					
-	});
-	
-	function selection_changed( select_obj ) {
-		var idx = select_obj.selectedIndex;
-		gMap.panTo(gMarkers[idx].position);		
-	}
-</script>
+<%= render 'shared/multi_loc_map_script', {obj_list: @attempts} %>
 <div class="row">
   <div class="span4">
 		<div class="craig-unit">
