--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
 		          </a>
 		          <ul class="dropdown-menu">
 			          <li><%= link_to "My Feats", feats_path %></li>
-								<li><%= link_to "My Records", attempts_path %></li>
+								<li><%= link_to "My Attempts", attempts_path %></li>
 			          <li>
 									<%= link_to "My Profile", user_path(current_user) %>
 								</li>
