--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,28 +49,32 @@
 
 			  
    <footer>
-   <div class="footer-unit">
+   
+       <div class="footer-unit">
      <div class="container">
        <div class="row-fluid">
          <div class="span3">
            <h1><em>Feats With Friends</em></h1>
            <a href="work.html"/><h2>How It Works</h2></a>
            <a href="terms.html"/><h2>Terms Of Service</h2></a>
-           <a href="terms.html#privacy"/><h2>Privacy Policy</h2></a>
+           <a href="app/views/static_pages/privacy_policy.html.erb"/><h2>Privacy Policy</h2></a>
          </div>
+		 
          <div class="span4">
            <h1><em>Help Us Build A Better Website</em></h1>
            <a href="report.html"/><h2>Report A Bug</h2></a>
            <a href="mailto:feedback@featswithfriends.com"><h2>feedback@featswithfriends.com</h2></a>
          </div>
+		 
          <div class="span3">
            <h1><em>Connecting With Us</em></h1>
            <a href="http://www.twitter.com/featsof" onclick="window.open('https://twitter.com/FeatsOf','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>@featsof</h2></a>
            <a href="http://www.facebook.com/featswithfriends" onclick="window.open('https://facebook.com/featswithfriends','popup','width=870,height=900,scrollbars=yes,resizable=yes'); return false"/><h2>facebook</h2></a>
          </div>
-         <div class="span2"><h3><br>©2012 IgnitionPad, LLC. All Rights Reserved</h3>
-         </div>
-       </div>
+         
+		 <div class="span2"><h3><br>©2012 IgnitionPad, LLC. All Rights Reserved</h3>
+         
+	   </div>
      </div>
    </div>
   
