--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="background-unit">
+<div class="container">
+
 <div class="row">
 	<div class="span1"><br></div>
   <div class="span11">
@@ -26,6 +29,8 @@
 			</div>
     </div>
   </div>
+</div>
+</div>
 </div>
 <br>
 <br>
