--- a/app/views/feats/index.html.erb
+++ b/app/views/feats/index.html.erb
@@ -3,8 +3,9 @@
   <div class="span4">
 		<div class="craig-unit">
 			<div class="scott-unit">
+				<%= link_to(( image_tag @user.image ), @user ) %>
         <h2>
-					<%= link_to "#{@user.username}", user_path(@user.id) %> has 
+					<%= link_to "#{@user.username}", @user %> has 
 						created the following feats:
 				</h2>
         <br>
