--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,10 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </div>
-      <a class="brand" href="single_signup.html"><img alt="Feats of"
-	      src="assets/img/featsof.png" style="height:38px"></a>
       <div class="nav-collapse pull-left">
         <ul class="nav">
+					<li>
+						<%= link_to(( image_tag "feats_logo_small.png" ), root_path ) %>
+					</li>			
           <li><a href="howitworks.html">How It Works</a></li>
           <li><a href="signin.html">Terms of Service</a></li>
         </ul>
