--- a/app/views/locations/locate.html.erb
+++ b/app/views/locations/locate.html.erb
@@ -37,33 +37,43 @@
 		marker.setMap(gMap);
 	});
 </script>
-<div class="container">
-	<div class "row">
-	  <div class="span4">
-			<div class="scott-unit">
-        <h3>Enter feat location address:</h3>
-        <br>
-        <%= form_for @location, url: locate_locations_path, 
+
+  <div class="background-unit">
+    <div class="container">
+	  <div class="row-fluid">
+        <div class="span3">
+		  <div class="craig-unit">
+            <h1>Where did the Feat take place?<br>
+			<br>
+			Enter an address for<br> the Feat location:</h1>
+            <br>
+            <%= form_for @location, url: locate_locations_path, 
 							method: 'get' do |f| %>
-         <%= render 'shared/error_messages', target: @location %>
-          <fieldset>
-           <%= f.label :address %>
-           <%= f.text_field :address, maxlength: 255 %>
+            <%= render 'shared/error_messages', target: @location %>
+            <fieldset>
+            <%= f.label :address %>
+            <%= f.text_field :address, maxlength: 255 %>
 					<br>
-           <%= f.submit 'Search', class: "btn btn-small btn-primary" %>
-         </fieldset>
-        <% end %>
-				<% if !session[:address].nil? %>
+            <%= f.submit 'Search', class: "btn btn-small btn-primary" %>
+            </fieldset>
+            <% end %>
+			<% if !session[:address].nil? %>
 				  <br>
 				  <br>
-				  <h4>Did you mean:</h4>
+				  <h1>Did you mean:</h1>
 				  <%= link_to "#{session[:address]}", 
 						choose_from_existing_locations_path %>
 				<% end %>
 		  </div>
 		</div>
-		<div id="map_canvas" class="span7"></div>
+		
+		<div class="span9">
+	      <div class="map-well">  
+		    <div id="map_canvas"></div>
+	      </div>
+        </div>
+      </div>
 	</div>
-</div>
-<br>
-<br>
+  </div>
+        <br>
+        <br>
