--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -116,12 +116,16 @@
 }
 
 
+
 .background-unit {
   min-height: 700px;
-  padding: 60px;
+  padding: 40px;
   margin-bottom: 0px;
-  background-image: url(grey_bkgrnd.png);
+  background-image: url(background.jpg);
   background-repeat: repeat;
+      -moz-box-shadow: inset 0 10px 10px -10px #999;
+  -webkit-box-shadow: inset 0 10px 10px -10px #999;
+  box-shadow: inset 0 10px 10px -10px #999;
 }
 
 .pull-right {
@@ -199,23 +203,21 @@
   visibility: hidden;
 }
 
-
-
 .footer-unit {
   min-height: 25px;
-  padding: 20px 15px 30px 15px;
+  padding: 10px 15px 30px 15px;
   margin-left: -20px;
   margin-right: -20px;
-  background-color: #000;
+  background-color: #333;
   border-top-style: solid;
-  border-color: #CCC;
+  border-color: #000;
   border-width: 1px; 
 }
 
 .footer-unit h1 {
   margin-bottom: 0;
-  font-size: 17px;
-  line-height: 2.2;
+  font-size: 16px;
+  line-height: 2;
   font-weight: 400;
   letter-spacing: 0px;
   color: #CCC;
@@ -223,7 +225,7 @@
 
 .footer-unit h2 {
   font-size: 14px;
-  line-height: 2;
+  line-height: 1.4;
   font-weight:400;
   color: #CCC;
 }
@@ -231,7 +233,7 @@
 .footer-unit h3 {
   font-size: 8px;
   line-height: 1.3;
-  color: #FFF;
+  color: #CCC;
 }
 
 .pull-right {
@@ -263,20 +265,26 @@
 
 
 .craig-unit {
-  min-height: 100px;
-  padding: 13px;
-  margin-bottom: 30px;
-  background: rgba(255, 255, 255, 0.3);
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+  min-height: 20px;
+  padding: 5px 20px 0px 20px;
+  margin-bottom: 20px;
+  background: #FFF;
+  border: 1px solid #CCC;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+
 }
 
 .craig-unit h1 {
   margin-bottom: 0;
   font-size: 16px;
-  line-height: 1;
-  letter-spacing: -1px;
+  line-height: 1.3;
+  letter-spacing: 0px;
+  font-weight: 400;
   color: #000;
 }
 
@@ -362,14 +370,13 @@
 .invisible {
   visibility: hidden;
 }
-.well2 {
+
+.home-well {
   min-height: 20px;
   min-width: 20px;
-  padding: 20px;
-  margin-bottom: 19px;
-  background-color: #E6E6E6;
-  border: 1px solid #eee;
-  border: 1px solid rgba(0, 0, 0, 0.05);
+  padding: 10px 22px 20px 22px;
+  background-color: #000;
+  margin-bottom: 0px;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
@@ -378,24 +385,86 @@
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.well2 blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
+.home-well h1 {
+  margin-bottom: 0;
+  font-size: 35px;
+  line-height: 1;
+  font-weight: 200;
+  letter-spacing: 0px;
+  color: #FFF;
 }
 
-.well2-large {
-  padding: 24px;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+.home-well h2 {
+  font-size: 24px;
+  line-height: 1.2;
+  font-weight:100;
+  color: #FFF;
+  letter-spacing: 1px;
 }
 
-.well2-small {
-  padding: 9px;
-  -webkit-border-radius: 3px;
-     -moz-border-radius: 3px;
-          border-radius: 3px;
+.map-well {
+  min-height: 20px;
+  min-width: 20px;
+  padding: 3px 3px 3px 3px;
+  background-color: #FFF;
+  margin-bottom: 0px;
+  border: 1px solid #CCC;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.05), -1px -1px 1px 1px rgba(0, 0, 0, 0.05);
 }
+
+.navbar-inner {
+  min-height: 50px;
+  padding: 10px, 20px, 1px, 20px;
+  background-color: rgba(51,51,51,1);
+  background-image: none;
+}
+
+.btn-small {
+  margin-top: 3px;
+  padding: 7px 12px 9px 12px;
+  font-size: 15px;
+  line-height: 1;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.btn-large {
+  padding: 12px 25px;
+  font-size: 20px;
+  font-weight: 200;
+  line-height: normal;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.navbar .nav > li > a {
+  float: none;
+  padding: 19px 10px 15px 10px;
+  line-height: 19px;
+  color: #CCC;
+  text-decoration: none;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.navbar .nav > li > a:hover {
+  color: #FFF;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #FFF;
+  text-decoration: underline;
+}
+
+
 
 /* forms */
 
